Added project name to footer

--- a/web/publications.html
+++ b/web/publications.html
@@ -68,12 +68,18 @@
       </section>
     
       <footer class="footer">
-          <p class="pull-left">
-              <a href="http://uq.edu.au/"><img src="img/UQlogo-color-transparent.png" alt="The University of Queensland"/></a>
-          </p>
-          <p class="pull-right">
-              <a href="http://nectar.org.au/"><img src="img/nectarlogo.png" alt="Nectar"/></a>
-          </p>
+          <div class="row">
+              <p class="pull-left">
+                  <a href="http://uq.edu.au/"><img src="img/UQlogo-color-transparent.png" alt="The University of Queensland"/></a>
+              </p>
+              <p class="pull-right">
+                  <a href="http://nectar.org.au/"><img src="img/nectarlogo.png" alt="Nectar"/></a>
+              </p>
+          </div>
+          <div class="row">
+              <hr/>
+              <p style=" text-align:center;" class="muted">AustESE: Australian Electronic Scholarly Editions</p>
+          </div>
       </footer>
     </div>
     <script src="js/jquery-1.7.1.min.js"></script>
