Updated contact page with phone and address

--- a/web/people.html
+++ b/web/people.html
@@ -88,7 +88,17 @@
           <div  class="page-header page-header-spacer">
               <h1>Contact</h1>
           </div>
-          <p>For further information, contact Jane Hunter: <a href="mailto:j.hunter@uq.edu.au">j.hunter@uq.edu.au</a></p>
+          <p>For further information, contact</p>
+          <p>Jane Hunter<br/>
+              <a href="mailto:j.hunter@uq.edu.au">j.hunter@uq.edu.au</a><br/>
+              <br/>
+              <a href="http://itee.uq.edu.au/~eresearch">eResearch Group</a><br/>
+              School of Information Technology and Electrical Engineering (ITEE)<br/>
+              78-709<br/>
+              The University of Queensland<br/>
+              St Lucia QLD Australia 4072<br/>
+              Phone: +61 7 3365 1092
+          </p>
       </section>
       <footer class="footer">
           <div class="row">
