Split all menu items onto separate pages, shifted logos to header. Added detail for events page

--- a/web/contact.html
+++ b/web/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AustESE: Australian Electronic Scholarly Editing - Publications</title>
+    <title>AustESE: Australian Electronic Scholarly Editing - People</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -45,8 +45,8 @@
               <li><a href="services.html">Services</a></li>
               <li><a href="people.html">People</a></li>
               <li><a href="events.html">Events</a></li>
-              <li class="active"><a href="publications.html">Publications</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="publications.html">Publications</a></li>
+              <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
             <p class="pull-right" style="margin-bottom:0;margin-top:10px;"><a href="http://nectar.org.au/"><img src="img/nectarlogo-inverse.png" alt="NeCTAR"/></a></p>
             <p class="pull-right" style="margin-bottom:0;margin-top:10px;margin-right:25px;"><a href="http://www.uq.edu.au"><img src="img/UQlogo-white-transparent.png" alt="UQ"/></a></p>
@@ -56,14 +56,22 @@
       </div>
     </div>
     <div class="container">
-      <section id="publications">
-          <div class="page-header">
-              <h1>Publications &amp; Presentations</h1>
+      <section id="contact">
+          <div  class="page-header">
+              <h1>Contact</h1>
           </div>
-           <p>Anna Gerber, Roger Osborne, <i>Transforming Communication in Textual Scholarship: Open Annotation for Electronic Editions</i>,
-              Digital Humanities Australasia (DHA) 2012, Canberra, 28 -30 March 2012.</p>
+          <p>For further information, contact</p>
+          <p>Jane Hunter<br/>
+              <a href="mailto:j.hunter@uq.edu.au">j.hunter@uq.edu.au</a><br/>
+              <br/>
+              <a href="http://itee.uq.edu.au/~eresearch">eResearch Group</a><br/>
+              School of Information Technology and Electrical Engineering (ITEE)<br/>
+              78-709<br/>
+              The University of Queensland<br/>
+              St Lucia QLD Australia 4072<br/>
+              Phone: +61 7 3365 1092
+          </p>
       </section>
-    
       <footer class="footer">
           <div class="row">
               <p class="pull-left">
