--- a/web/events.html
+++ b/web/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AustESE: Australian Electronic Scholarly Editing - Publications</title>
+    <title>AustESE: Australian Electronic Scholarly Editing - Events</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -44,8 +44,8 @@
               <li><a href="index.html">About</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="people.html">People</a></li>
-              <li><a href="events.html">Events</a></li>
-              <li class="active"><a href="publications.html">Publications</a></li>
+              <li class="active"><a href="events.html">Events</a></li>
+              <li><a href="publications.html">Publications</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
             <p class="pull-right" style="margin-bottom:0;margin-top:10px;"><a href="http://nectar.org.au/"><img src="img/nectarlogo-inverse.png" alt="NeCTAR"/></a></p>
@@ -56,14 +56,16 @@
       </div>
     </div>
     <div class="container">
-      <section id="publications">
+      <section id="events">
           <div class="page-header">
-              <h1>Publications &amp; Presentations</h1>
+              <h1>Events</h1>
           </div>
-           <p>Anna Gerber, Roger Osborne, <i>Transforming Communication in Textual Scholarship: Open Annotation for Electronic Editions</i>,
-              Digital Humanities Australasia (DHA) 2012, Canberra, 28 -30 March 2012.</p>
+          
+          <h2>Collaboration and Challenges in Digital Scholarly Editing</h2>
+          <p><em><a href="http://aa-dh.org/conference/workshops/">Digital Humanities Australasia (DHA) 2012</a>, March 27, 2012, ANU</em></p>
+          <p>Led by: Professor Paul Eggert (Australian Defence Force Academy, University of New South Wales), Professor Peter Robinson (University of Saskatchewan, Canada), Dr Desmond Schmidt (Queensland University of Technology), Professor Jane Hunter (University of Queensland)</p>
+          <p>This workshop offers an introduction to some recent developments in what has now been two decades of efforts to create a sustaining digital environment and tools for the building of scholarly editions of literary, biblical and other works. Aims have evolved over the years but they include: providing archives of the documentary tradition of variant versions of works in textual and visual form, producing and displaying collations of the textual variation, and facilitating ongoing collaborative interpretation of the stored texts and images. The two presenters will report on alternative solutions that have been emerging: Desmond Schmidt, on ‘XML-free Digital Editions’ and Peter Robinson on ‘Collaborative Models for Textual Editing’. Paul Eggert will introduce the workshop with some historical background and, after the coffee break, invite the two speakers to comment on one another’s proposals, including the issue of the advantages and disadvantages for digital editions of TEI encoding.</p>
       </section>
-    
       <footer class="footer">
           <div class="row">
               <p class="pull-left">
