--- a/web/people.html
+++ b/web/people.html
@@ -41,13 +41,16 @@
           <a class="brand" href="index.html"><img src="img/AustESELogoSmall.png" alt="AustESE"/></a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a onclick="activateLink($(this))" href="index.html">About</a></li>
-              <li><a onclick="activateLink($(this))" href="index.html#services">Services</a></li>
-              <li><a onclick="activateLink($(this))" href="#people">People</a></li>
-              <li><a onclick="activateLink($(this))" href="publications.html#events">Events</a></li>
-              <li><a onclick="activateLink($(this))" href="publications.html#publications">Publications</a></li>
-              <li><a onclick="activateLink($(this))" href="#contact">Contact</a></li>
+              <li><a href="index.html">About</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li class="active"><a href="people.html">People</a></li>
+              <li><a href="events.html">Events</a></li>
+              <li><a href="publications.html">Publications</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
+            <p class="pull-right" style="margin-bottom:0;margin-top:10px;"><a href="http://nectar.org.au/"><img src="img/nectarlogo-inverse.png" alt="NeCTAR"/></a></p>
+            <p class="pull-right" style="margin-bottom:0;margin-top:10px;margin-right:25px;"><a href="http://www.uq.edu.au"><img src="img/UQlogo-white-transparent.png" alt="UQ"/></a></p>
+            
           </div>
         </div>
       </div>
@@ -83,22 +86,6 @@
             <li>Senior Software Engineer – Anna Gerber;</li>
             <li>Junior Software Developer – TBA.</li>
           </ul>
-      </section>
-      <section id="contact">
-          <div  class="page-header page-header-spacer">
-              <h1>Contact</h1>
-          </div>
-          <p>For further information, contact</p>
-          <p>Jane Hunter<br/>
-              <a href="mailto:j.hunter@uq.edu.au">j.hunter@uq.edu.au</a><br/>
-              <br/>
-              <a href="http://itee.uq.edu.au/~eresearch">eResearch Group</a><br/>
-              School of Information Technology and Electrical Engineering (ITEE)<br/>
-              78-709<br/>
-              The University of Queensland<br/>
-              St Lucia QLD Australia 4072<br/>
-              Phone: +61 7 3365 1092
-          </p>
       </section>
       <footer class="footer">
           <div class="row">
