--- a/web/services.html
+++ b/web/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AustESE: Australian Electronic Scholarly Editing - Publications</title>
+    <title>AustESE: Australian Electronic Scholarly Editing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -42,10 +42,10 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="index.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
+              <li class="active"><a href="services.html">Services</a></li>
               <li><a href="people.html">People</a></li>
               <li><a href="events.html">Events</a></li>
-              <li class="active"><a href="publications.html">Publications</a></li>
+              <li><a href="publications.html">Publications</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
             <p class="pull-right" style="margin-bottom:0;margin-top:10px;"><a href="http://nectar.org.au/"><img src="img/nectarlogo-inverse.png" alt="NeCTAR"/></a></p>
@@ -56,14 +56,55 @@
       </div>
     </div>
     <div class="container">
-      <section id="publications">
+      <section id="services">
           <div class="page-header">
-              <h1>Publications &amp; Presentations</h1>
+              <h1>Services</h1>
           </div>
-           <p>Anna Gerber, Roger Osborne, <i>Transforming Communication in Textual Scholarship: Open Annotation for Electronic Editions</i>,
-              Digital Humanities Australasia (DHA) 2012, Canberra, 28 -30 March 2012.</p>
+          <img style="display: block;max-width: 100%;margin-left: auto;margin-right: auto;" src="img/architecture.png" alt="AustESE Architecture"/>
+          <hr>
+          <div class="row">
+              <div id="repository" class="span4">
+                  <h2>Content Repository</h2>
+                  <p>A combination of a relational datastore and RDF triplestore, the content repository stores images, transcriptions (as Multi-Version-Documents), annotations &amp; edition metadata.</p>
+              </div>
+              <div id="markup" class="span4">
+                  <h2>Text Import &amp; Mark-up</h2>
+                  <p>Includes editing tools for adding markup and corrections as well as tools to import transcriptions and images from a variety of formats including TEI/XML.</p>
+              </div>
+            <div id="alignment" class="span4">
+                <h2>Text &amp; Image Alignment</h2>
+                <p>Tools to support automatic or manual mapping and overlay of transcriptions and facsimile images.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div id="collation" class="span4">
+                <h2>Collation &amp; Textual Analysis</h2>
+                <p>Tools to assist editors to collate texts and to produce apparatus for scholarly editions. These tools will also provide visualisation of variants and the visualisation of relationships between texts.</p>
+            </div>
+            <div id="annotation" class="span4">
+                <h2>Annotation &amp; Tagging</h2>
+                <p>Collaborative annotation tools that allow editors to attach or reply to scholarly commentary on variations or parts of images or transcriptions, display, search or migrate annotations.</p>
+            </div>
+            <div id="publishing" class="span4">
+                <h2>Electronic Publishing</h2>
+                <p>Tools for versioning, locking &amp; publishing electronic scholarly editions as well as to export to formats such as TEI, MS Word &amp; ePub.</p>
+            </div>
+          </div>
+          <div class="row">
+              <div id="workflow" class="span4">
+                <h2>Workflow Engine</h2>
+                <p>The workflow engine captures the sequence of tasks and decision-making steps as well as the provenance of generating an electronic scholarly edition.</p>
+            </div>
+            <div id="webportal" class="span4">
+                <h2>Web Portal</h2>
+                <p>Integrates the workbench modules and provides a web-based user interface.</p>
+            </div>
+            <div id="auth" class="span4">
+                <h2>Access &amp; Authentication</h2>
+                <p>AustESE will use the Australian Access Federation (AAF) services to implement authentication and access control.</p>
+            </div>
+          </div>
       </section>
-    
       <footer class="footer">
           <div class="row">
               <p class="pull-left">
