Correct name of project in footers

--- a/web/contact.html
+++ b/web/contact.html
@@ -83,7 +83,7 @@
           </div>
           <div class="row">
               <hr/>
-              <p style=" text-align:center;" class="muted">AustESE: Australian Electronic Scholarly Editions</p>
+              <p style=" text-align:center;" class="muted">AustESE: Australian Electronic Scholarly Editing</p>
           </div>
       </footer>
     </div>
