Remove smart quotes, mdash

--- a/web/people.html
+++ b/web/people.html
@@ -63,7 +63,7 @@
           <h2>Project Steering Committee</h2>
           <ul>
             <li>Community Project Leader and Chair - Prof Paul Eggert, UNSW;</li>
-            <li>Technical Project Leader – Prof Jane Hunter, UQ;</li>
+            <li>Technical Project Leader - Prof Jane Hunter, UQ;</li>
             <li>Project Manager - Wilfred Brimblecombe, UQ;</li>
             <li>Technical Adviser - Dr Desmond Schmidt, QUT;</li>
             <li>Prof Tim Dolin, Curtin University;</li>
@@ -81,10 +81,10 @@
           </ul>
           <h2>Project Team</h2>
           <ul>
-            <li>Project Manager – Wilfred Brimblecombe;</li>
+            <li>Project Manager - Wilfred Brimblecombe;</li>
             <li>Workflow Analyst and Community Liaison - Dr Roger Osborne;</li>
-            <li>Senior Software Engineer – Anna Gerber;</li>
-            <li>Junior Software Developer – TBA.</li>
+            <li>Senior Software Engineer - Anna Gerber;</li>
+            <li>Junior Software Developer - TBA.</li>
           </ul>
       </section>
       <footer class="footer">
