Added logos for partner institutions

--- a/web/events.html
+++ b/web/events.html
@@ -68,8 +68,20 @@
       </section>
       <footer class="footer">
           <div class="row">
-              <p class="pull-left">
+              <p style="padding-right:17px" class="pull-left">
                   <a href="http://uq.edu.au/"><img src="img/UQlogo-color-transparent.png" alt="The University of Queensland"/></a>
+              </p>
+              <p style="padding-right:17px" class="pull-left">
+                  <a href="http://www.unsw.edu.au/"><img src="img/UNSWlogo.jpg" alt="UNSW"/></a>
+              </p>
+              <p style="padding-right:17px" class="pull-left">
+                  <a href="http://www.curtin.edu.au/"><img src="img/curtinlogo.png" alt="Curtin University"/></a>
+              </p>
+              <p style="padding-right:17px" class="pull-left">
+                  <a href="http://sydney.edu.au/"><img src="img/USydlogo.jpg" alt="University of Sydney"/></a>
+              </p>
+              <p style="padding-right:17px" class="pull-left">
+                  <a href="http://qut.edu.au/"><img src="img/QUTlogo.gif" alt="QUT"/></a>
               </p>
               <p class="pull-right">
                   <a href="http://nectar.org.au/"><img src="img/nectarlogo.png" alt="Nectar"/></a>
