--- a/web/related.html
+++ b/web/related.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AustESE: Australian Electronic Scholarly Editing - Contact</title>
+    <title>AustESE: Australian Electronic Scholarly Editing - Related</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -51,21 +51,14 @@
       </div>
     </div>
     <div class="container">
-      <section id="contact">
+      <section id="related">
           <div  class="page-header">
-              <h1>Contact</h1>
+              <h1>Related Tools &amp; Projects</h1>
           </div>
-          <p>For further information, contact</p>
-          <p>Jane Hunter<br/>
-              <a href="mailto:j.hunter@uq.edu.au">j.hunter@uq.edu.au</a><br/>
-              <br/>
-              <a href="http://itee.uq.edu.au/~eresearch">eResearch Group</a><br/>
-              School of Information Technology and Electrical Engineering (ITEE)<br/>
-              78-709<br/>
-              The University of Queensland<br/>
-              St Lucia QLD Australia 4072<br/>
-              Phone: +61 7 3365 1092
-          </p>
+          <ul>
+              <li><a href="https://sites.google.com/a/ctsdh.luc.edu/hrit-intranet/">HRIT (Humanities Research Infrastructure and Tools)</a></li>
+              <li><a href="http://code.google.com/p/multiversiondocs/">multiversiondocs nmerge</a></li>
+              <li><a href="http://collatex.sourceforge.net/">CollateX</a></li>
       </section>
       <footer class="footer">
           <div class="row">
