--- a/web/services.html
+++ b/web/services.html
@@ -2,18 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AustESE: Australian Electronic Scholarly Editing</title>
+    <title>AustESE: Australian Electronic Scholarly Editing - Services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 80px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-      /* FF6600 */
-    </style>
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/austese.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -46,6 +40,7 @@
               <li><a href="people.html">People</a></li>
               <li><a href="events.html">Events</a></li>
               <li><a href="publications.html">Publications</a></li>
+              <li><a href="related.html">Related</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
             <p class="pull-right" style="margin-bottom:0;margin-top:10px;"><a href="http://nectar.org.au/"><img src="img/nectarlogo-inverse.png" alt="NeCTAR"/></a></p>
