Added more related projects

--- a/web/related.html
+++ b/web/related.html
@@ -55,10 +55,15 @@
           <div  class="page-header">
               <h1>Related Tools &amp; Projects</h1>
           </div>
+          <p>AustESE will draw on existing tools and projects, including:</p>
           <ul>
               <li><a href="https://sites.google.com/a/ctsdh.luc.edu/hrit-intranet/">HRIT (Humanities Research Infrastructure and Tools)</a></li>
               <li><a href="http://code.google.com/p/multiversiondocs/">multiversiondocs nmerge</a></li>
+              <li><a href="http://www.interedition.eu/">Interedition</a></li>
               <li><a href="http://collatex.sourceforge.net/">CollateX</a></li>
+              <li><a href="http://www.juxtasoftware.org/">Juxta</a></li>
+              <li><a href="http://www.e-laborate.nl/en/">eLaborate</a></li>
+              <li><a href="http://mith.umd.edu/tile/">TILE</a></li>
       </section>
       <footer class="footer">
           <div class="row">
