--- a/web/publications.html
+++ b/web/publications.html
@@ -58,7 +58,12 @@
            <p>Anna Gerber, Roger Osborne, <i>Transforming Communication in Textual Scholarship: Open Annotation for Electronic Editions</i>,
               Digital Humanities Australasia (DHA) 2012, Canberra, 28 -30 March 2012.</p>
       </section>
-    
+      <section id="publications">
+          <div class="page-header">
+              <h1>Project documentation</h1>
+          </div>
+          <p>AustESE <a href="https://github.com/uq-eresearch/AustESE/wiki">wiki</a> on GitHub</p>
+      </div>
       <footer class="footer">
           <div class="row">
               <p style="padding-right:17px" class="pull-left">
