Added a tweet feed to the web site plus generated a custom QR code for the project using QR Art coder http://research.swtch.com/qr/draw

--- a/web/index.html
+++ b/web/index.html
@@ -87,6 +87,10 @@
               <li> and a <em>repository</em> that supports the discovery, search, retrieval, exploration and re-use of texts and electronic editions.</li>
            </ul>
       </section>
+      <section id="tweets">
+            <h2>Recent tweets</h2>
+            <div style="padding-top:1em" id="jstwitter"></div>
+      </section> 
       <footer class="footer">
           <div class="row">
               <p style="padding-right:17px" class="pull-left">
@@ -115,6 +119,7 @@
       </footer>
     </div>
     <script src="js/jquery-1.7.1.min.js"></script>
+    <script src="js/tweets.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript">
         function activateLink(link){
