Added link to slides for DHA

--- a/web/publications.html
+++ b/web/publications.html
@@ -55,7 +55,7 @@
           <div class="page-header">
               <h1>Publications &amp; Presentations</h1>
           </div>
-           <p>Anna Gerber, Roger Osborne, <i>Transforming Communication in Textual Scholarship: Open Annotation for Electronic Editions</i>,
+           <p>Anna Gerber, Roger Osborne, <a href="../../presentations/Gerber-DHA2012-slides-web.pdf"><i>Transforming Communication in Textual Scholarship: Open Annotation for Electronic Editions</i></a>,
               Digital Humanities Australasia (DHA) 2012, Canberra, 28 -30 March 2012.</p>
       </section>
       <section id="documents">
