Switched the recent tweets section to include tweets from the AustESE account rather than using a search. Included links for twitter and the new blog for the project.

--- a/web/publications.html
+++ b/web/publications.html
@@ -60,9 +60,14 @@
       </section>
       <section id="documents">
           <div class="page-header">
-              <h1>Project documentation</h1>
+              <h1>Project Documentation and Upates</h1>
           </div>
-          <p>AustESE <a href="https://github.com/uq-eresearch/AustESE/wiki">wiki</a> on GitHub</p>
+          <p><a href="https://github.com/uq-eresearch/AustESE/wiki">AustESE wiki</a> on GitHub</p>
+          <p><a href="http://austese.wordpress.com/">AustESE blog</a></p>
+          <p>
+          <a href="https://twitter.com/AustESE" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @AustESE</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          </p>
       </section>
       <footer class="footer">
           <div class="row">
