--- a/web/contact.html
+++ b/web/contact.html
@@ -66,6 +66,11 @@
               St Lucia QLD Australia 4072<br/>
               Phone: +61 7 3365 1092
           </p>
+          
+          <p style="margin-top:45px">
+          <a href="https://twitter.com/intent/tweet?screen_name=AustESE" class="twitter-mention-button" data-size="large" data-related="AnnaGerber,TomCollinsAndCo">Tweet to @AustESE</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          </p>
       </section>
       <footer class="footer">
           <div class="row">
