CSS fix for logo in nav bar

--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img style="margin-top:3px" src="img/AustESELogoSmall.png" alt="AustESE"/></a>
+          <a class="brand" href="index.html"><img src="img/AustESELogoSmall.png" alt="AustESE"/></a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="index.html">About</a></li>
