Make it clearer when tweets displayed have have been retweeted

--- a/web/index.html
+++ b/web/index.html
@@ -89,6 +89,7 @@
       </section>
       <section id="tweets">
             <h2>Recent tweets</h2>
+            <p>The AustESE Project team is keeping track of the latest developments in electronic scholarly editing. Follow AustESE on Twitter for the latest news on our project and others across the world.</p>
             <div style="padding-top:1em" id="jstwitter"></div>
       </section> 
       <section id="blog">
