Shift blogs before tweets on front page

--- a/web/index.html
+++ b/web/index.html
@@ -87,17 +87,16 @@
               <li> and a <em>repository</em> that supports the discovery, search, retrieval, exploration and re-use of texts and electronic editions.</li>
            </ul>
       </section>
+      <section id="blog">
+            <h2>Recent blog posts</h2>
+            <ul style="padding-top:1em;padding-bottom:1em" id="jsblog"></ul>
+      </section> 
       <section id="tweets">
             <h2>Recent tweets</h2>
             <p>The AustESE Project team is keeping track of the latest developments in electronic scholarly editing. Follow AustESE on Twitter for the latest news on our project and others across the world.</p>
             <div style="padding-top:1em" id="jstwitter"></div>
       </section> 
-      <section id="blog">
-          <div class="page-header">
-            <h2>Recent blog posts</h2>
-          </div>
-          <ul style="padding-top:1em" id="jsblog"></ul>
-      </section> 
+
       <footer class="footer">
           <div class="row">
               <p style="padding-right:17px" class="pull-left">
