--- a/web/index.html
+++ b/web/index.html
@@ -93,7 +93,7 @@
       </section> 
       <section id="tweets">
             <h2>Recent tweets</h2>
-            <p>The AustESE Project team is keeping track of the latest developments in electronic scholarly editing. Follow AustESE on Twitter for the latest news on our project and others across the world.</p>
+            <p>The AustESE Project team is keeping track of the latest developments in electronic scholarly editing. <a href="https://twitter.com/#!/austese">Follow AustESE on Twitter</a> for the latest news on our project and others across the world.</p>
             <div style="padding-top:1em" id="jstwitter"></div>
       </section> 
 
