Nuance the funding message again

--- a/web/index.html
+++ b/web/index.html
@@ -70,7 +70,7 @@
       <p>The AustESE project is a collaboration between <a href="http://www.uq.edu.au">The University of Queensland</a>, <a href="http://www.unsw.edu.au/">University of NSW</a>, <a href="http://www.curtin.edu.au/">Curtin University</a>, <a href="http://sydney.edu.au/">University of Sydney</a>, <a href="http://www.qut.edu.au/">Queensland University of Technology</a>, <a href="http://www.luc.edu/">Loyola University, Chicago</a> and the <a href="http://www.usask.ca/">University of Saskatchewan</a>. 
       It is being project managed out of the <a href="http://itee.uq.edu.au/~eresearch/">ITEE eResearch Group</a> at The University of Queensland.</p>
 	  
-	  <p>Funding is being negotiated through the <a href="http://nectar.org.au/">NeCTAR</a> e-Research Tools program for 2 years from 2012-2013.</p>
+	  <p>Funding is being sought through the <a href="http://nectar.org.au/">NeCTAR</a> e-Research Tools program for 2 years from 2012-2013.  A contract confirming this is expected before end June 2012.</p>
          
       <p><strong>The aim of the AustESE project is to develop a set of interoperable services to support the production of electronic scholarly editions by distributed collaborators in a Web 2.0 environment.</strong></p>
        
