Added funding acknowledgement wording from communication plan to footer of all pages on website

--- a/web/contact.html
+++ b/web/contact.html
@@ -96,6 +96,7 @@
           <div class="row">
               <hr/>
               <p style=" text-align:center;" class="muted">AustESE: Australian Electronic Scholarly Editing</p>
+              <p style="text-align:justify;" class="muted">The University of Queensland is proud to be in partnership with the National eResearch Collaboration Tools and Resources (NeCTAR) project to create a unique opportunity to develop eResearch Tools that support the Collaborative Authoring and Management of Electronic Scholarly Editions.  This project will benefit the Australian research community by providing an online research and publishing platform that contributes to the preservation and understanding of literary, classical, theological and philosophical texts that have shaped our cultural heritage. </p>
           </div>
       </footer>
     </div>
