NeCTAR contract executed - update funding statement

--- a/web/index.html
+++ b/web/index.html
@@ -71,7 +71,7 @@
       It is being project managed out of the <a href="http://itee.uq.edu.au/~eresearch/">ITEE eResearch Group</a> at The University of Queensland.</p>
 	  
 	  <p>Funding has been approved by <a href="http://nectar.org.au/">NeCTAR</a> (National eResearch Collaboration Tools and Resources) via the eResearch Tools 
-	  program from May 2012 to Dec 2013.  Contract negotiations are underway and are expected to be completed shortly.</p>
+	  program from June 2012 to Dec 2013.  Contract negotiations completed and executed on 5 June 2012.</p>
          
       <p><strong>The aim of the AustESE project is to develop a set of interoperable services to support the production of electronic scholarly editions by distributed collaborators in a Web 2.0 environment.</strong></p>
        
