--- a/web/people.html
+++ b/web/people.html
@@ -60,6 +60,7 @@
             <li>Community Project Leader and Chair - Prof Paul Eggert, UNSW;</li>
             <li>Technical Project Leader - Prof Jane Hunter, UQ;</li>
             <li>Project Manager - Wilfred Brimblecombe, UQ;</li>
+			<li>Workflow Analyst and Community Liaison - Dr Roger Osborne, UQ;</li>
             <li>Technical Adviser - Dr Desmond Schmidt, QUT;</li>
             <li>Prof Tim Dolin, Curtin University;</li>
             <li>Dr Mark Byron, University of Sydney;</li>
