--- a/web/people.html
+++ b/web/people.html
@@ -64,7 +64,7 @@
             <li>Technical Adviser - Dr Desmond Schmidt, QUT;</li>
             <li>Prof Tim Dolin, Curtin University;</li>
             <li>Dr Mark Byron, University of Sydney;</li>
-            <li>NeCTAR representative</li>
+            <li>Dr Nigel Ward, NeCTAR representative</li>
           </ul>
           <h2>International Advisory Committee</h2>
           <ul>
