Added Presentations by Anna and Roger
Anna - OAC Review Meeting Chicago
Roger - BookLogic 2012 Perth

--- a/web/publications.html
+++ b/web/publications.html
@@ -55,6 +55,12 @@
           <div class="page-header">
               <h1>Publications &amp; Presentations</h1>
           </div>
+		   <p>Anna Gerber, <a href="http://www.openannotation.org/documents/ChicagoOAC_ReviewMeeting.pdf">
+		      <i>Annotation Supporting Collaborative Development of Scholarly Editions</i></a>,
+			  Open Annotation Collaboration Project Review Meeting, Chicago, July 26-27, 2012.</p>
+		   <p>Roger Osborne, <a href="http://www.notwithoutmustard.net/book-logic2012/"><i>Making the Archive Talk: An Ontology-based
+		      Electronic Edition of Joseph Furphy's Such is Life</i></a>,
+			  Book Logic Symposium, Perth, June 29, 2012.</p>
            <p>Anna Gerber, Roger Osborne, <a href="../../presentations/Gerber-DHA2012-slides-web.pdf"><i>Transforming Communication in Textual Scholarship: Open Annotation for Electronic Editions</i></a>,
               Digital Humanities Australasia (DHA) 2012, Canberra, 28 -30 March 2012.</p>
       </section>
