Add publication for Digital Humanities 2012, Hamburg

--- a/web/publications.html
+++ b/web/publications.html
@@ -55,6 +55,9 @@
           <div class="page-header">
               <h1>Publications &amp; Presentations</h1>
           </div>
+		   <p>R. Osborne, A. Gerber, J. Hunter, <a href="http://www.dh2012.uni-hamburg.de/conference/programme/pre-conference-workshops/">
+		      <i>Ontology-based Annotation for Electronic Editions using the Open Annotation Collaboration (OAC) Data Model</i></a>,
+		      NeDiMaH Workshop on Ontology Based Annotation, Digital Humanities 2012, Hamburg, Germany, July 16-20, 2012.</p>
 		   <p>Anna Gerber, <a href="http://www.openannotation.org/documents/ChicagoOAC_ReviewMeeting.pdf">
 		      <i>Annotation Supporting Collaborative Development of Scholarly Editions</i></a>,
 			  Open Annotation Collaboration Project Review Meeting, Chicago, July 26-27, 2012.</p>
