--- a/web/contact.html
+++ b/web/contact.html
@@ -55,8 +55,13 @@
           <div  class="page-header">
               <h1>Contact</h1>
           </div>
+		  <p>For access to the project Sandbox, directions to the code, contact the Project Manager</p>
+		  <p>Wilfred Brimblecombe<br/>
+		      <a href="mailto:w.brimblecombe@uq.edu.au">w.brimblecombe@uq.edu.au</a><br/>
+              <br/>
+          </p>
           <p>For further information, contact</p>
-          <p>Jane Hunter<br/>
+          <p>Prof Jane Hunter<br/>
               <a href="mailto:j.hunter@uq.edu.au">j.hunter@uq.edu.au</a><br/>
               <br/>
               <a href="http://itee.uq.edu.au/~eresearch">eResearch Group</a><br/>
